--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -106,7 +106,7 @@ msgstr "Для подтверждения введите, пожалуйста, 
 
 #: task_manager/templates/users/create.html:41
 msgid "Submit"
-msgstr "Продолжить"
+msgstr "Зарегистрировать"
 
 #: task_manager/templates/users/index.html:12
 msgid "Full name"
